feat: restructure layout with SidePanel and Header components
refactor: update Home page layout to remove redundant components

fix: update ExpenseStatistics component to use COLORS from constants

feat: add InvestmentStatCard and MonthlyRevenue components

feat: implement MyInvestment and MyInvestmentCard components

feat: create TrendingStock and YearlyTotalInvestment components

feat: add various investment-related icons

style: create reusable Card component for consistent UI

style: update color constants for better maintainability

feat: add data for yearly investments and revenue, and my investments

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@
   --color-teal: #16dbcc;
   --color-light-blue: #edf1f7;
   --color-gray: #b1b1b1;
+  --color-light-pink: #ffe0eb;
 }
 
 @custom-variant dark (&:is(.dark *));
@@ -101,7 +102,6 @@
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
-  --primary-2: #343c6a;
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
